main/default/objects/Subcontractor__c/Subcontractor__c.object-meta.xml
<CustomObject>
    <description>Sub contractors are facilities that deliver to a assembly facility</description>
    <label>Subcontractor</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Subcontractor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>