main/default/objects/Subcontractor__c/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <formula>Facility__r.Facility_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Number</label>
    <type>Text</type>
</CustomField>