main/default/objects/Subcontractor__c/fields/Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status__c</fullName>
    <formula>Text(Facility__r.Facility_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Status</label>
    <type>Text</type>
</CustomField>