main/default/objects/Subcontractor__c/fields/Green_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Green_List_Status__c</fullName>
    <formula>Facility__r.Green_List_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Green List Status</label>
    <type>Text</type>
</CustomField>