main/default/objects/Subcontractor__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subcontractor</description>
    <inlineHelpText>Subcontractor</inlineHelpText>
    <label>Subcontractor</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Subcontractores (Subcontractor)</relationshipLabel>
    <relationshipName>Subcontractores1</relationshipName>
    <type>Lookup</type>
</CustomField>